--- a/ProjetFinal/ProjetFinal.UI.WPF/Themes/StylesAndTemplates.xaml
+++ b/ProjetFinal/ProjetFinal.UI.WPF/Themes/StylesAndTemplates.xaml
@@ -3,6 +3,14 @@
                     xmlns:local="clr-namespace:ProjetFinal.UI.WPF"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
 
+
+    <LinearGradientBrush x:Key="DockPanelStyle" EndPoint="1,1" StartPoint="0,0">
+        <GradientStop Color="#53c653" Offset="0" />
+        <GradientStop Color="#66cc66" Offset="0.318" />
+        <GradientStop Color="#79d279" Offset="0.834" />
+        <GradientStop Color="#c6ecc6" Offset="1" />
+    </LinearGradientBrush>
+
     <LinearGradientBrush x:Key="MouseOverBrush" EndPoint="0.5,1" StartPoint="0.5,0">
         <!--<GradientStop Color="#FFFFFFFF" Offset="0" />
         <GradientStop Color="#FFFEF3B5" Offset="0.318" />
