--- a/ProjetFinal/ProjetFinal.UI.WPF/MainWindow.xaml
+++ b/ProjetFinal/ProjetFinal.UI.WPF/MainWindow.xaml
@@ -26,18 +26,20 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-
-                <ListBox Name="Queries" Grid.Column="0" Grid.RowSpan="4" 
+            <TextBlock Name="QueryListboxTitle" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                Liste des requêtes
+            </TextBlock>
+                <ListBox Name="Queries" Grid.Column="0" Grid.Row="1" Grid.RowSpan="3" 
                          ItemsSource="{Binding Path=listQueries}" SelectionChanged="Queries_SelectionChanged">
                     <!--<ListBoxItem>Requête 1</ListBoxItem>
                     <ListBoxItem>Requête 2</ListBoxItem>-->
                 </ListBox>
 
                 <ComboBox Name="URLs" Grid.Column="1" Grid.Row="0"                          
-                          ItemsSource="{Binding ElementName=Queries, Path=SelectedItem.urls}" SelectionChanged="URLs_SelectionChanged_1">                    
+                          ItemsSource="{Binding ElementName=Queries, Path=SelectedItem.urls}" SelectionChanged="URLs_SelectionChanged_1">                   
                 </ComboBox>
 
-                <ListBox Name="Selectors" Grid.Column="1" Grid.Row="1"
+                <ListBox x:Name="Selectors" Grid.Column="1" Grid.Row="1"
                          ItemsSource="{Binding ElementName=URLs, Path=SelectedItem.selectors}">
 
                 </ListBox>
