Gerer html/css/js + FAQ.html

--- a/ProjetFinal/ProjetFinal.UI.HTML/styles/Gerer.css
+++ b/ProjetFinal/ProjetFinal.UI.HTML/styles/Gerer.css
@@ -5,9 +5,14 @@
     flex:auto;
 }
 
-.button {
-    margin:50px;
-    
+#boutons {
+    min-height:100%;
+    display:flex;
+    justify-content:center;    
+}
+
+#Execute, #Save, #Cancel, #Delete {
+    margin:10px;
 }
 
 /*#boutons {
