--- a/ProjetFinal/ProjetFinal.UI.HTML/styles/Gerer.css
+++ b/ProjetFinal/ProjetFinal.UI.HTML/styles/Gerer.css
@@ -15,6 +15,21 @@
     margin:10px;
 }
 
+.divTextArea {
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+}
+
+legend {
+    align-items:center;
+}
+
+.glyphicon {
+    right:auto;
+    color:red;
+}
+
 /*#boutons {
     display:flex;
     justify-content: center;    
