--- a/ProjetFinal/ProjetFinal.UI.HTML/styles/Login.css
+++ b/ProjetFinal/ProjetFinal.UI.HTML/styles/Login.css
@@ -12,8 +12,8 @@ input[type=text], input[type=password] {
 }
 
 button {
-    background-color: #4CAF50;
-    color: white;
+    /*background-color: #4CAF50;
+    color: white;*/
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -22,7 +22,7 @@ button {
 }
 
 button:hover {
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 .cancelbtn {
