add nav+footer on all pages

--- a/ProjetFinal/ProjetFinal.UI.HTML/styles/site.css
+++ b/ProjetFinal/ProjetFinal.UI.HTML/styles/site.css
@@ -5,10 +5,8 @@
 
         .navbar-fixed-bottom {
             background-color:darkgray;
-            margin:auto;            
         }
 
-        .navbar-fixed-bottom > p {
-            color:white;
-            
+        .navbar-fixed-bottom > p {            
+            margin:10px;                        
         }
