--- a/ProjetFinal/ProjetFinal.UI.HTML/styles/Login.css
+++ b/ProjetFinal/ProjetFinal.UI.HTML/styles/Login.css
@@ -1,4 +1,8 @@
-﻿form {
+﻿container {
+    background-color:#f1f1f1;
+}
+
+form {
     border: 3px solid #f1f1f1;
 }
 
@@ -22,13 +26,13 @@ button {
 }
 
 button:hover {
-    opacity: 0.9;
+    opacity: 0.8;
 }
 
 .cancelbtn {
     width: auto;
     padding: 10px 18px;
-    background-color: #f44336;
+    /*background-color: #f44336;*/
 }
 
 .imgcontainer {
@@ -37,8 +41,8 @@ button:hover {
 }
 
 img.avatar {
-    width: 40%;
-    border-radius: 50%;
+    /*width: 40%;
+    border-radius: 50%;*/
 }
 
 .container {
