--- a/ProjetFinal/ProjetFinal.UI.HTML/styles/Gerer.css
+++ b/ProjetFinal/ProjetFinal.UI.HTML/styles/Gerer.css
@@ -1,40 +1,52 @@
 ﻿
 .wrapper {
-    display:flex;
-    justify-content:space-between;
-    flex:auto;
+    display: flex;
+    justify-content: space-between;
+    flex: auto;
 }
 
 #boutons {
-    min-height:100%;
-    display:flex;
-    justify-content:center;    
+    min-height: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 #Execute, #Save, #Cancel, #Delete {
-    margin:10px;
+    margin: 10px;
 }
 
-.divTextArea {
-    display:flex;
-    flex-direction:column;
+#queryTextArea, #urlTextArea {
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
+#selectedQuery, #selectedURL {
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
 legend {
-    align-items:center;
+    align-items: center;
 }
 
-#test {
-    display:flex;
+#glyphicon {
+    display: flex;
     /*flex-direction:column;*/
-    justify-content:flex-end;
+    justify-content: flex-end;
     /*align-items:center;*/
-   
 }
-.glyphicon {
-    margin-left:5px;
 
+.glyphicon {
+    margin-left: 5px;
+}
+
+.changeCouleur {
+    color:black;   
 }
 
 /*#boutons {
