--- a/ProjetFinal/UIL/Views/Shared/_Layout.cshtml
+++ b/ProjetFinal/UIL/Views/Shared/_Layout.cshtml
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Projet WebScraper</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @RenderSection("css", required:false)
 
 </head>
 <body>
@@ -17,13 +18,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Projet WebScraper", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
+                    <li>@Html.ActionLink("A propos", "About", "Home")</li>
+                    <li>@Html.ActionLink("Gestion", "manageQueries", "addNewQuery")</li>
+                    <li>@Html.ActionLink("Nous contacter", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -33,12 +35,17 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <hr>
+            <p>&copy; @DateTime.Now.Year - Projet WebScraper</p>
+            @*<p class="text-muted">Projet Selenium 2017.</p>*@
+            <p class="text-muted">Formation GT'M Ingénierie - Formateur Ali MAKRI</p>
+            <p class="text-muted pull-right">Réalisé par ARNAUD Jonathan et CHERBAL Amin </p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/bootstrap")  
     @RenderSection("scripts", required: false)
+
 </body>
 </html>
