Avant Dernier Jour : ASPNet MVC + pb buffering recursivité page Gestion

--- a/ProjetFinal/UIL/Views/Home/About.cshtml
+++ b/ProjetFinal/UIL/Views/Home/About.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "A propos";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Le binôme Amin et Jonathan</h3>
 
 <p>Use this area to provide additional information.</p>
+
+@*TODO : A REMPLIR AVEC NOS INFORMATIONS*@
