--- a/ProjetFinal/UIL/Content/Site.css
+++ b/ProjetFinal/UIL/Content/Site.css
@@ -2,7 +2,9 @@
     padding-top: 50px;
     padding-bottom: 20px;
 }
-
+.Red  {
+    background-color:blue;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
