--- a/ProjetFinal/UIL/Views/Home/Contact.cshtml
+++ b/ProjetFinal/UIL/Views/Home/Contact.cshtml
@@ -4,6 +4,8 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+@*TODO A REMPLIR AVEC NOS INFOS*@ 
+
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
