UIL sans 3 executions !

--- a/ProjetFinal/UIL/Content/Gerer.css
+++ b/ProjetFinal/UIL/Content/Gerer.css
@@ -11,7 +11,7 @@
     justify-content: center;
 }
 
-#Execute, #Save, #Cancel, #Delete {
+#Execute, #Save, #Result, #Delete {
     margin: 10px;
 }
 
