--- a/ProjetFinal/UIL/Views/addNewQuery/manageQueries.cshtml
+++ b/ProjetFinal/UIL/Views/addNewQuery/manageQueries.cshtml
@@ -46,7 +46,7 @@
         </fieldset>
     </div>
 
-    <div  class="container col-lg-3">
+    <div class="container col-lg-3">
         <fieldset>
             <legend>Aperçu des données</legend>
             <div id="Data">
@@ -64,8 +64,7 @@
     @*<button class="btn btn-primary" id="Cancel">Annuler</button>*@
 </div>
 
-
-@section scripts{
-    <script src="/Scripts/Gerer.js"></script>
-    <script src="/Scripts/Gerer-Ajax.js"></script>
+@section scripts {
+    <script src="~/Scripts/Gerer.js"></script>
+    <script src="~/Scripts/Gerer-Ajax.js"></script>
 }
