--- a/ProjetFinal/UIL/Content/Gerer.css
+++ b/ProjetFinal/UIL/Content/Gerer.css
@@ -49,6 +49,10 @@ legend {
     color:black;   
 }
 
+.newquery .newurl .newselector {
+    background-color:darkgreen;
+}
+
 /*#boutons {
     display:flex;
     justify-content: center;    
