--- a/ProjetFinal/UIL/Views/Shared/_Layout.cshtml
+++ b/ProjetFinal/UIL/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @RenderSection("css", required:false)
-
+    <link href="~/Content/Gerer.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
