--- a/ProjetFinal/UIL/Views/Shared/_ListeURL.cshtml
+++ b/ProjetFinal/UIL/Views/Shared/_ListeURL.cshtml
@@ -1,9 +1,12 @@
 ﻿@model IEnumerable<WebScraper.WCF.PageContract>
 
 
+@if (Model.Count() > 0)
+{
 
-    @foreach (var item in Model)
+    foreach (var item in Model)
     {
         <a class="list-group-item url" name="url" id="@item.Id">@item.URL</a>
     }
 
+ } 
